[package]
name = "token-api"
description = "API for interacting with the Token program"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true
steel.workspace = true
thiserror.workspace = true
mpl-token-metadata.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
